# lizi_robot

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
Arduino/LiziDUE2/: IMU.ino  LiziDUE2.ino  Pan_Tilt.ino
Arduino/LiziDUE4/: DRIVER.ino  LiziDUE4.ino
Arduino/libraries/DualMC33926/: keywords.txt~
config/: default.yaml  default4.yaml  lizi_env.sh  lizi_usb.rules~  multi_lizi_control.yaml  ros_lib make libraries.sh  ros_lib make libraries.sh~  setup.sh  setup.sh~
config/lizi_env/: lizi1_env.sh
launch/: base_station.launch  lizi.launch  lizi2.launch  lizi4.launch  lizi_launch.launch  multi_lizi_control.launch  test_urdf.launch  test_urdf.launch~
lizi/: CHANGELOG.rst  package.xml
lizi/config/: default.yaml  lizi_usb.rules  ros_lib make libraries.sh  setup.sh  setup.sh~
lizi/config/lizi_env/: lizi2_env.sh~  lizi3_env.sh~  lizi4_env.sh~
lizi/launch/: base_station.launch  lizi.launch  lizi_no_laser.launch
lizi/src/: lizi_node.cpp
lizi/srv/: set_parameters.srv
lizi_arduino/: CHANGELOG.rst  CMakeLists.txt  package.xml
lizi_arduino/Arduino/LiziDUE2/: DRIVER.ino  DRIVER.ino~  LiziDUE2.ino
lizi_arduino/Arduino/LiziDUE4/: DRIVER.ino~  LiziDUE4.ino  LiziDUE4.ino~
lizi_base_station/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
lizi_base_station/config/: multi_lizi_control.yaml
lizi_base_station/launch/: base_station.launch  base_station_only_1.launch  base_station_only_2.launch  multi_lizi_control.launch  remote_lizi.launch  remote_lizi_no_laser.launch  remote_lizi_only_webcam.launch
lizi_base_station/scripts/: multi_lizi_control.py
lizi_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
lizi_urdf/: CHANGELOG.rst  CMakeLists.txt  package.xml
lizi_urdf/robots/: lizi.xacro  lizi.xacro~  lizi_blue.xacro  lizi_green.xacro  lizi_red.xacro  lizi_red.xacro~  lizi_urdf.xml~  model.xacro~
mc/LiziDUE2/: LiziDUE2.ino
mc/libraries/DualMC33926/: DualMC33926MotorShield.h~
mc/libraries/MPU9150Lib/: MPU9150Lib.h
msg/: lizi_status.msg
scripts/: instructions.txt  multi lizi control instructions.txt  multi_lizi_control.py
src/: lizi_node.cpp  lizi_node.cpp~
(+6 files in other folders)
