<package>
  <name>lizi_robot</name>
  <version>1.0.0</version>
  <description>
    Lizi robot metapackage.
  </description>
  <maintainer email="support@robotican.net">Yam Geva</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

<export>
   <metapackage/>
 </export>

</package>
