<?xml version="1.0"?>
<package>
  <name>lizi_robot</name>
  <version>1.0.0</version>
  <description>Lizi robot package collection</description>
  <url>http://www.ros.org/wiki/lizi_robot</url>
  <maintainer email="support@robotican.net">RoboTiCan</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>lizi</run_depend>
  <run_depend>lizi_base_station</run_depend>
  <run_depend>lizi_urdf</run_depend>

  <export>
  	<metapackage/>
  </export>
  
</package>

